# Atlas-Install

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  README.md  convert_file.json  ct_config.json  file_process.json  file_structure.json  fs.json  main.pyw  mkdocs.yml  option.json  requirements.txt  setup.py  translation.json  version
.github/: FUNDING.yml
Pack/MKWFaraphel/: ct_config.json  file_process.json  file_structure.json  macros.json  messages.json  mod_config.json  process.json  structure.json
Pack/MKWFaraphel/_LPAR/: debug.lpar
Pack/MKWFaraphel/file/: itemBoxNiseRtpa.brres
Updater/: Updater.py  build.bat  setup.py
assets/language/: en.json  fr.json  ge.json
docs/: index.md  requirements.txt
file/: CTFILE.txt  Common_E.txt  Common_F.txt  Common_G.txt  Common_I.txt  Common_RE.txt  Common_RF.txt  Common_RG.txt  Common_RI.txt  Common_RS.txt  Common_S.txt  kart_kanji_font.brfnt  lpar-debug.txt  lpar-default.txt
file/Track-WU8/: (Vide).wu8  3DS Cheep Cheep Lagoon.wu8  3DS DK Jungle.wu8  3DS Maka Wuhu.wu8  3DS Mario Circuit.wu8  3DS Neo Bowser City.wu8  3DS Piranha Plant Slide.wu8  8-Bit Way.wu8  Abandoned Bazaar.wu8  Abandoned Boardwalk.wu8  Abandoned Pipeyard.wu8  Academic Raceway.wu8  Acid Terrene.wu8  Alphina.wu8  Alpine Skyway.wu8  Ancient Ruins.wu8  Animal Crossing.wu8  Anime Circuit.wu8  Anthro Valley.wu8  Aperture Laboratories.wu8  Aqua Temple.wu8  Aquadrom Stage.wu8  Arrow Circuit.wu8  Autumn Island.wu8  Back to the 80s.wu8  BashnDashnBash.wu8  Big Pyramid Way.wu8  Big World Way.wu8  Block's Castle.wu8  Boggly Woods.wu8  Bonita Harbor.wu8  Boshi Skatepark.wu8  Bouncy Farm.wu8  Bowser Circuit.wu8  Bowser Jr.'s Fort.wu8  Bowser's Flooded Castle.wu8  Bowser's Fortress.wu8  Bowser's Lava Circle.wu8  Bowser's Lava Road.wu8  Bowsers Challenge.wu8  (+336 more)
include/Atlas/nodes/: README.md
include/utils/: string.h
plugins/: _test.py
scripts/: add_my_score_to_old_notation.py  ask_map_preview.py  discord_add_track.py  generate_track_minimap.py  generate_track_preview.py  get 3D model from szs.py  obj_to_png (minimap).py  requirements.txt  sort_tracks_abc.py  update_discord_track_sha1.py  update_track_score_from_discord.py
scripts/minimap/: obj_to_png.py
source/: CT_Config.py  Common.py  Cup.py  Error.py  Game.py  Gui.py  Option.py  Progress.py  StateButton.py  Track.py  Translation.py  __init__.py  check_update.py  create_lecode_config.py  definition.py  event.py  get_github_file.py  install_mod.py  log_error.py  main.cpp  option.py  patch_bmg.py  patch_ct_icon.py  patch_file.py  patch_image.py  patch_img_desc.py  patch_track.py  plugins.py  progress.py  restart.py  safe_eval.py  translate.py  translation.py  utils.py  wszst.py
source/CT_Config/: __init__.py  add_ordered_cup.py  add_unordered_track.py  create_ctfile.py  get_cticon.py  load_ctconfig_file.py  load_ctconfig_json.py  search_tracks.py
source/Cup/: __init__.py  get_ctfile_cup.py  load_from_json.py
source/Game/: __init__.py  convert_to.py  exception.py  extract.py  install_mod.py  patch_autoadd.py  patch_bmg.py  patch_file.py  patch_image.py  patch_img_desc.py  patch_track.py
source/Gui/: Main.py  SelectPack.py  TrackConfiguration.py  TrackSelection.py  __init__.py  check_update.py  log_error.py  progress.py  restart.py  state_button.py  translate.py
source/Option/: __init__.py  edit.py  load_from_file.py  load_from_json.py  save_to_file.py
source/Track/: __init__.py  __repr__.py  check_sha1.py  convert_wu8_to_szs.py  download_wu8.py  get_ctfile.py  get_track_formatted_name.py  get_track_name.py  load_from_json.py
source/cli/: install.py
source/gui/: __init__.py  install.py  mod_configuration.py  mod_settings.py  mystuff.py
source/gui/preview/: __init__.py  track_formatting.py  track_selecting.py  track_sorting.py
source/interface/: __init__.py
source/interface/cli/: install.py
source/interface/gui/: __init__.py  install.py  mod_settings.py
source/mkw/: Cup.py  ExtractedGame.py  Game.py  MKWColor.py  ModConfig.py  OriginalTrack.py  Patch.py  Slot.py  Track.py  TrackGroup.py  __init__.py
source/mkw/ModSettings/: AbstractModSettings.py  Boolean.py  Check.py  Choices.py  ModSettingsGroup.py  String.py  __init__.py
source/mkw/Patch/: Patch.py  (+5 more)
source/safe_eval/: __init__.py  __test__.py  macros.py  multiple_safe_eval.py  safe_eval.py  safe_function.py
source/utils/: string.cpp
source/wszst/: __init__.py  bmg.py  ctc.py  error.py  img.py  lec.py  szs.py  wit.py  wstrt.py
source/wt/: __init__.py  bmg.py  ctc.py  img.py  lec.py  str.py  szs.py  wit.py  wstrt.py
tools/: README.txt
(+232 files in other folders)
